# codon-optimizer-kphaffii

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_optimizer.bat
optimizer/: __init__.py  cai.py  checkers.py  codon_table.py  optimizer.py  restriction.py
tests/: test_optimizer.py
web/: app.py
web/templates/: index.html
